# WuWaChat

./: .gitignore  AGENTS.md  README.md  build.ps1  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json
.github/workflows/: build.yml
resources/: embedding.json
resources/chars/Cartethyia/: info.json  prompt.md
src/main/: app-events.ts  bootstrap-data.ts  characters.ts  constants.ts  embedding-provider.ts  index.ts  ipc.ts  local-embedding.ts  logger.ts  memory-fingerprint.ts  memory-retrieval.ts  memory-world.ts  memory.ts  settings.ts  window.ts
src/main/ai/: index.ts  model-factory.ts  runtime.ts  session-store.ts
src/main/app/: bootstrap-data.ts  constants.ts  events.ts  window.ts
src/main/characters/: constants.ts  index.ts  mappers.ts  remote-client.ts  types.ts
src/main/chat/: graph-factory.ts  graph-node-context.ts  graph-state.ts  index.ts  (+9 more)
src/preload/: index.d.ts  index.ts
src/renderer/: App.tsx  env.d.ts  logging.ts  main.tsx  utils.ts
src/shared/: ai.ts  chat.ts  logging.ts  memory-settings.ts  model-settings.ts  tools.ts
wuwachat-server/: config.py  main.py  pyproject.toml  type.py  wuwachat-server.spec
wuwachat-server/data/: char.yaml
wuwachat-server/data/prompt/: katixiya.卡提希娅.md
wuwachat-server/model/: chain.py  factory.py
wuwachat-server/utils/: char.py  prompt.py
wuwachat-ui/: package-lock.json  package.json
wuwachat-ui/src/: App.tsx  main.tsx  style.css  vite-env.d.ts
wuwachat-ui/src-tauri/: Cargo.toml  tauri.conf.json
(+158 files in other folders)
