[project]
name = "wuwachat-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.129.0",
    "google-genai>=1.63.0",
    "html2text>=2025.4.15",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.11",
    "langchain-deepseek>=1.0.1",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.9",
    "ollama>=0.6.1",
    "pyinstaller>=6.19.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.46",
]

[[tool.uv.index]]
name = "ustc"
url = "https://pypi.mirrors.ustc.edu.cn/simple/"